docs/api/qiskit/0.24/qiskit.providers.ibmq.BackendJobLimit.mdx
---
title: BackendJobLimit
description: API reference for qiskit.providers.ibmq.BackendJobLimit
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ibmq.BackendJobLimit
---

<span id="qiskit-providers-ibmq-backendjoblimit" />

# qiskit.providers.ibmq.BackendJobLimit

<Class id="qiskit.providers.ibmq.BackendJobLimit" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.12/qiskit/providers/ibmq/backendjoblimit.py" signature="BackendJobLimit(maximum_jobs, running_jobs, **kwargs)" modifiers="class">
  Job limit for a backend.

  Represent the job limit for a backend on a specific provider. This instance is returned by the [`IBMQBackend.job_limit()`](qiskit.providers.ibmq.IBMQBackend#job_limit "qiskit.providers.ibmq.IBMQBackend.job_limit") method.

  ### maximum\_jobs

  <Attribute id="qiskit.providers.ibmq.BackendJobLimit.maximum_jobs">
    The current number of active jobs on this backend, with this provider.
  </Attribute>

  ### running\_jobs

  <Attribute id="qiskit.providers.ibmq.BackendJobLimit.running_jobs">
    The current number of active jobs on this backend, with this provider.
  </Attribute>

  BackendJobLimit constructor.

  **Parameters**

  *   **maximum\_jobs** (`int`) – The maximum number of concurrent jobs this account is allowed to submit to this backend, with this provider.
  *   **running\_jobs** (`int`) – The current number of active jobs on this backend, with this provider.
  *   **kwargs** (`Any`) – Additional attributes that will be added as instance members.

  ### \_\_init\_\_

  <Function id="qiskit.providers.ibmq.BackendJobLimit.__init__" signature="__init__(maximum_jobs, running_jobs, **kwargs)">
    BackendJobLimit constructor.

    **Parameters**

    *   **maximum\_jobs** (`int`) – The maximum number of concurrent jobs this account is allowed to submit to this backend, with this provider.
    *   **running\_jobs** (`int`) – The current number of active jobs on this backend, with this provider.
    *   **kwargs** (`Any`) – Additional attributes that will be added as instance members.
  </Function>

  ## Methods

  |                                                                                                                                                          |                              |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------- |
  | [`__init__`](#qiskit.providers.ibmq.BackendJobLimit.__init__ "qiskit.providers.ibmq.BackendJobLimit.__init__")(maximum\_jobs, running\_jobs, \*\*kwargs) | BackendJobLimit constructor. |

  ## Members list
</Class>

